fixed scrollbar issue

--- a/watchApp/app/styles/main.scss
+++ b/watchApp/app/styles/main.scss
@@ -6,4 +6,5 @@
 
 body {
     margin: 0px;
+    overflow: hidden;
 }
